text-align: Fix breakpoint priority

--- a/assets/sass/text-align.scss
+++ b/assets/sass/text-align.scss
@@ -3,7 +3,9 @@
 //Mixin to generate text alignment
 @mixin generate-text-align($sides: $default-text-align-sides, $breakpoints: $grid-breakpoints) {
 	//We generate for each sides
-	@each $side in $sides {
-		@include css-generator('text', text-align, ($side: $side), $breakpoints);
+	@each $key, $value in $breakpoints {
+		@each $side in $sides {
+			@include css-generator('text', text-align, ($side: $side), ($key: $value));
+		}
 	}
 }
